--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "vite",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -11,9 +12,20 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "antd": "^5.15.3",
+    "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0"
+    "react-icons": "^5.0.1",
+    "react-image-gallery": "1.2.11",
+    "react-json-view": "^1.21.3",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "react-spinners": "^0.13.8",
+    "redux-persist": "^6.0.0",
+    "sass": "^1.72.0",
+    "uuid": "^9.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
